--- a/tableitizer-container.toml
+++ b/tableitizer-container.toml
@@ -65,6 +65,8 @@ install_setup_cmds = [
 
   # Possible JIT compiler for python runtime - compatability w/ libs unknown
   "SH_IN_CONTAINER: su user -c 'yay -Sy --noconfirm pypy3 ; pypy3 -m ensurepip --user '",
+  # Stuff to support building pip packages for pypy3
+  "SH_IN_CONTAINER: su user -c 'yay -Sy --noconfirm blas-openblas '",
 
 ]
 
